lazyload hierarchy shift

--- a/cyberotica.html
+++ b/cyberotica.html
@@ -29,8 +29,8 @@
         <img class="lozad lazyload" data-src="cyberotica/abstract1.jpg">
         <img class="lozad lazyload" data-src="cyberotica/contents2.jpg">
     </div>
-    <img class="col123 lozad lazyload" data-src="cyberotica/guiltymemory.jpg">
-    <img class="col123 lozad lazyload" data-src="cyberotica/kentridge.jpg">
+    <img class="lozad lazyload col123" data-src="cyberotica/guiltymemory.jpg">
+    <img class="lozad lazyload col123" data-src="cyberotica/kentridge.jpg">
     <img class="col12 lozad lazyload" data-src="cyberotica/factoryofthesun.jpg"> 
     <div class="col12 polyptych">
         <img class="lozad lazyload" data-src="cyberotica/zachblas.jpg">  
