josh gif compression

--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -21,7 +21,7 @@
     </div>
 
 
-        <img class="col23 lozad lazyload" data-src="joshualeifer/jleifer1.png">
+        <img class="col23 lozad lazyload" data-src="joshualeifer/josh.gif">
         <div class="col23 caption">Joshua Leifer dotcom, 2020</div>
         <img class="col23 lozad lazyload" data-src="joshualeifer/jleifer-12.png">
         <div class="col23 diptych">
