--- a/nytimes.html
+++ b/nytimes.html
@@ -24,16 +24,16 @@
     <div class="col23 subhead" style="margin-top:0px;">News Design</div>
     <div class="col23 caption">Select layouts for the New York Times.</div>
 
-    <img class="col23 lozad lazyload" data-src="nytimes/missouri-guns.png">
+    <img class="lozad lazyload col123" data-src="nytimes/missouri-guns.png">
     <div class="col23 caption">"Inside Missouri's '2nd Amendment Sanctuary' Fight".<span class="citation">Words by Glenn Thrush</span></div>
 
     <img class="col23 lozad lazyload" data-src="nytimes/nyt6.png">
     <div class="col23 caption">"Population: One".<span class="citation">Words and Photographs by Ruth Fremson</span></div>
            
-    <img class="col23 lozad lazyload" data-src="nytimes/viljandi.png">
+    <img class="lozad lazyload col23" data-src="nytimes/viljandi.png">
     <div class="col23 caption">"A Town Bursting with Life, but Overlooked by Europe's Tourists".<span class="citation">Words and Photographs by Gabriel Leigh</span></div>
 
-    <img class="col23 lozad lazyload" data-src="nytimes/blackvoters.png">
+    <img class="lozad lazyload col23" data-src="nytimes/blackvoters.png">
     <div class="col23 caption">"Black Voters Change the Look of Power in New York".<span class="citation">By Katie Glueck and Jeffery C. Mays</span></div>
 
     <img class="col23 lozad lazyload" data-src="nytimes/nyt152.png">
