--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 
 <div class="listing" data-link="joshualeifer.html">
-    <img class="lozad lazyload col12" data-src="joshualeifer/jleifer-05.png">   
+    <img class="lozad lazyload col12" data-src="joshualeifer/josh.gif">   
     <h2><span class="client col3">Portfolio</span><br>Joshua Leifer</h2>
 </div>
 
