took certain case studies off homepage

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <img class="lozad lazyload" data-src="spaceopera/spaceopera3-thumbnail.png">
 </div>
 
-<div class="listing" data-link="transientgrounds.html">
+<!--<div class="listing" data-link="transientgrounds.html">
     <h2>Transient Grounds<br><span class="client">ACOMPI x NARS Foundation</h2>
     <img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png">
     <img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png">
-</div>
+</div>-->
 
 <div class="listing" data-link="cyberotica.html">
     <img class="lozad lazyload col12" data-src="cyberotica/jeong.jpg">
@@ -66,17 +66,17 @@
     <img class="lozad lazyload" data-src="mariovoid/gameover-thumbnail.png">
 </div>-->
 
-<div class="listing" data-link="reconnatypeface.html">
+<!--<div class="listing" data-link="reconnatypeface.html">
     <h2>Reconna<br><span class="client">Type Design</span></h2>   
     <img class="lozad lazyload" data-src="reconna/IMG_1237-thumbnail.jpg">
     <img class="lozad lazyload" data-src="reconna/IMG_1234-thumbnail.jpg">
-</div>
+</div>-->
 
-<div class="listing" data-link="sober21.html">
+<!--<div class="listing" data-link="sober21.html">
     <h2>Sober 21<br><span class="client">The Creative Independent</span></h2>
    <img class="lozad lazyload" data-src="sober21/IMG_6427 copy.jpg">
    <img class="lozad lazyload" data-src="sober21/IMG_6445 copy.jpg">
-</div>
+</div>-->
 
 <div class="listing" data-link="reflections.html">
     <h2>Reflections on Practice</h2>
