Acuity case study r1 and VD case study r1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <!--------------------------insert page-specific information in this section ONLY----------------------->
 <section id="navcontainer"></section>  
 
+<div class="listing" data-link="venndiagramm.html">
+    <h2>Publication Design<br><span class="client">Venn Diagramm</span></h2>
+    <img class="lozad lazyload" data-src="venndiagramm/CurioShop-15.jpg">
+    <img class="lozad lazyload" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+</div> 
+
 <div class="listing" data-link="fossora.html">
     <h2 class="col1">fossora<br><span class="client">Björk</span></h2>
     <img class="col23" src="fossora/bjork-ovule-22.jpg">
@@ -21,6 +27,12 @@
     <img src="mhns/mhns-thumbnail.png">
     <img src="mhns/catalog-thumbnail.gif">
 </div>
+
+<div class="listing" data-link="acuity.html">
+    <h2>Identity<br><span class="client">Acuity Scheduling</span></h2>
+    <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_05.png">
+    <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_04.png">
+</div> 
 
 <div class="listing" data-link="community.html">
     <img class="lozad lazyload col12" data-src="community/contents.jpg">
@@ -44,12 +56,6 @@
     <img class="lozad lazyload" data-src="spaceopera/spaceopera3-thumbnail.png">
 </div>
 
-<!--<div class="listing" data-link="transientgrounds.html">
-    <h2>Transient Grounds<br><span class="client">ACOMPI x NARS Foundation</h2>
-    <img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png">
-    <img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png">
-</div>-->
-
 <div class="listing" data-link="cyberotica.html">
     <img class="lozad lazyload col12" data-src="cyberotica/jeong.jpg">
     <h2><span class="col3">Cyberotica</span></h2>
@@ -60,6 +66,19 @@
     <h2><span class="client col3">Portfolio</span><br>Joshua Leifer</h2>
 </div>
 
+<div class="listing" data-link="reflections.html">
+    <h2>Reflections on Practice</h2>
+   <img class="lozad lazyload" data-src="reflections/IMG_6544-thumbnail.jpg">
+   <img class="lozad lazyload" data-src="reflections/IMG_6714-thumbnail.jpg">
+</div>
+
+<div class="listing" data-link="postcursor.html">
+    <h2>Postcursor / Starrynite</h2>
+    <img class="lozad lazyload" data-src="postcursor/postcursor-02-thumbnail.png">
+    <img class="lozad lazyload" data-src="postcursor/postcursor-04-thumbnail.png">
+</div>
+
+<!------------------------ old case studies -------------->
 <!--<div class="listing" data-link="mariovoid.html">
     <h2><span class="title">Super Mario Void</span></h2>
     <img class="lozad lazyload" data-src="mariovoid/thumbnail-thumbnail.png">
@@ -78,17 +97,11 @@
    <img class="lozad lazyload" data-src="sober21/IMG_6445 copy.jpg">
 </div>-->
 
-<div class="listing" data-link="reflections.html">
-    <h2>Reflections on Practice</h2>
-   <img class="lozad lazyload" data-src="reflections/IMG_6544-thumbnail.jpg">
-   <img class="lozad lazyload" data-src="reflections/IMG_6714-thumbnail.jpg">
-</div>
-
-<div class="listing" data-link="postcursor.html">
-    <h2>Postcursor / Starrynite</h2>
-    <img class="lozad lazyload" data-src="postcursor/postcursor-02-thumbnail.png">
-    <img class="lozad lazyload" data-src="postcursor/postcursor-04-thumbnail.png">
-</div>
+<!--<div class="listing" data-link="transientgrounds.html">
+    <h2>Transient Grounds<br><span class="client">ACOMPI x NARS Foundation</h2>
+    <img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png">
+    <img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png">
+</div>-->
 
 <!-----------------scripts and end tags below — do not touch---------->
 <!--<div class="querytown"></div>-->
