--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -19,24 +19,51 @@
                 <p>Select works are free to print, assemble, and share, or available for purchase at events, bookstores, and shops.<a href="www.instagram.com/_venndiagramm" target="_blank"> Follow Venn Diagramm</a> or visit <a href="www.venndiagramm.space" target="_blank">www.venndiagramm.space</a> for updates.</p>
         </div>
 
-        <img class="col23" src="venndiagramm/CurioShop-1.jpg">
-        <div class="subhead col23">Curio Shop, 2023</div>
-        <div class="diptych col23">
+        <img class="col23" src="venndiagramm/FlimForum-Sidebyside.jpg">
+        <div class="subhead col23">Flim Forum: Notes on Movies, 2023</div>  
+        <img class="col23 lozad lazyload" data-src="venndiagramm/FlimForum-2.jpg">
+        <img class="col23 lozad lazyload" data-src="venndiagramm/FlimForum-4.jpg">
+
+        <div class="subhead col12" style="padding-top:120px;">Curio Shop, 2023</div>
+        <img class="col12" src="venndiagramm/CurioShop-1.jpg">
+        <div class="diptych col12">
             <img src="venndiagramm/CurioShop-30.jpg">
             <img src="venndiagramm/CurioShop-29.jpg">
         </div>
-        <div class="diptych col23">
+        <div class="diptych col12">
             <img class="lozad lazyload" data-src="venndiagramm/CurioShop-15.jpg">
             <img class="lozad lazyload" data-src="venndiagramm/CurioShop-16.jpg">
         </div>
+        <div class="diptych col12">
+            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-5.jpg">
+            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-6.jpg">
+        </div>
 
-    <div class="subhead col23">Flim Forum, 2023</div>  
-    <img class="col23" src="venndiagramm/FlimForum-Sidebyside.jpg">
-    <div class="diptych col23">
-        <img class="lozad lazyload" data-src="venndiagramm/FlimForum-2.jpg">
-        <img class="lozad lazyload" data-src="venndiagramm/FlimForum-4.jpg">
-    </div>
+    <div class="subhead col23" style="padding-top:120px;">Arno Goetz: This is a Wild Place, 2023</div>
+        <img class="col23 lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 1.jpg">
+        <img class="col23 lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 27.jpg">
+        <img class="col23 lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 17.jpg">
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 24.jpg">
+            <img class="lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 29.jpg">
+        </div>
 
+    <div class="subhead col12" style="padding-top:120px;">Garden of Eden</div>
+        <img class="col12 lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 Layered.png">
+        <img class="col12 lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 Layered-Back.png">
+        <div class="diptych col12">
+            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 15.png">
+            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 17.png">
+        </div>
+        <div class="diptych col12">
+            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 1.png">
+            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 13.png">
+        </div>
+
+        <img class="col123 lozad lazyload" style="padding-top:120px;" data-src="venndiagramm/VennDiagramm 6.png">
+    
+
+<!----------closing div do not touch-->
     </div>
        
     <div id="projfooter"></div>
