Acuity added motion section

--- a/acuity.html
+++ b/acuity.html
@@ -54,6 +54,12 @@
         <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.png">
         <div class="col23 caption">A layout system evoking calendar blocks adheres to a set construction process. A modular grid system dictates margins and columns. Events are placed on the grid and broken into blocks, then annotated with timestamps.</div>
 
+<!---------------------motion----------------------->
+        <img class="col23 lozad lazyload" data-src="acuity/AS_logo_gradient_optimized.gif">
+        <img class="col23 lozad lazyload" data-src="acuity/motion-showcase.gif">
+        <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
+
+<!---------------------applications----------------->
         <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_04.png">
         <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_09.png">
         <img class="col23 lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.png">
