--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <div class="listing" data-link="acuity.html">
     <h2>Identity<br><span class="client">Acuity Scheduling</span></h2>
+    <img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">
     <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_05.png">
-    <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_04.png">
 </div> 
 
 <div class="listing" data-link="community.html">
