--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <div class="listing" data-link="venndiagramm.html">
     <h2>Publication Design<br><span class="client">Venn Diagramm</span></h2>
-    <img class="lozad lazyload" data-src="venndiagramm/CurioShop-15.jpg">
-    <img class="lozad lazyload" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+    <img class="" src="venndiagramm/CurioShop-15.jpg">
+    <img class="" src="venndiagramm/FlimForum-Sidebyside.jpg">
 </div> 
 
 <div class="listing" data-link="fossora.html">
