--- a/acuity.html
+++ b/acuity.html
@@ -23,7 +23,7 @@
 
         <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.png">
 <!---------------------color----------------------->
-        <img class="col23" src="acuity/logo.png">
+        <img class="col23" src="acuity/Logo.png">
         <div class="diptych col23">
             <img src="acuity/Logo Gradients.png">
             <img src="acuity/Color System B.png">
