file lazyload fix

--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -60,7 +60,7 @@
             <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 13.png">
         </div>
 
-        <img class="col123 lozad lazyload" style="padding-top:120px;" data-src="venndiagramm/VennDiagramm 6.png">
+        <img class="col123" style="padding-top:120px;" src="venndiagramm/VennDiagramm 6.png">
     
 
 <!----------closing div do not touch-->
