--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <section id=navcontainer></section>
 
 <section id="about">
-    <h2 class="col23">Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts. She also co-operates <a href=https://venndiagramm.space/" target="_blank">Venn Diagramm</a>, an incipient print and art collective; and works as a brand designer at Squarespace.</h2>
+    <h2 class="col23">Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts. She also co-operates print and art collective <a href="https://venndiagramm.space/" target="_blank">Venn Diagramm</a>. Previously, she has worked as a Brand Designer at Squarespace and as a Staff Designer at The New York Times</h2>
      <div class="cv col2">
         <p class="item-title">Speaking</p>
         <span>Tools for Collaboration: Common Fields Convening, 2021</span>
