New Acuity case study / bug fixes

--- a/acuity.html
+++ b/acuity.html
@@ -15,20 +15,23 @@
  <div id="gallery">
         <div class="description">
             <h2>Visual identity<br><span class="client">Acuity Scheduling</span></h2>
-                <p>Squarespace acquired <a href="www.acuityscheduling.com" target="blank">Acuity Scheduling</a> in 2019. In the years since, Squarespace has integrated scheduling capabilities into its suite of selling tools, while continuing to scale Acuity as a standalone platform. My team was tasked with developing an identity for Acuity that would communicate this positioning. We were asked to give Acuity a distinct design system and art directorial style, equipping the brand to live on its own while nonetheless integrating into Squarespace communications.</p>
-                <p>Our solve pulls visual fodder from the scheduling process. The Acuity Scheduling color palette responds dynamically to the passage of time: keystone gradients map to parts of the day, meeting customers where they are in real time. A composition system uses grids and image masks to echo the language of calendar blocks. And the steady blinking colon of digital clocks acts as cornerstone for the brand, appearing in its wordmark, informing its proprietary motion, and expanding into a graphic language. We worked closely with Acuity's team to apply this identity across all surfaces, directing a photo and video shoot and developing meaningful brand expression across the product.</p>
+                <p>Squarespace acquired <a href="www.acuityscheduling.com" target="blank">Acuity Scheduling</a> in 2019. In the years since, Squarespace has integrated scheduling capabilities into its suite of selling tools, while continuing to scale Acuity as a standalone platform. My team was tasked with developing an identity for Acuity that would communicate this positioning. We were asked to equip the brand both to live on its own and to integrate smoothly into Squarespace communications.</p>
+                <p>The result pulls inspiration from across the scheduling process. The Acuity Scheduling palette responds dynamically to the passage of time: keystone gradients map to parts of the day, meeting customers where they are in real time. A composition system uses echos the language of calendar blocks. And the steady blinking colon of digital clocks acts as cornerstone for the brand, appearing in its wordmark and informing its proprietary motion. We worked closely with Acuity's team to apply this identity across surfaces, directing a photo and video shoot and developing brand expression across the product.</p>
                 <p>Creative Direction: Satu Pelkonen<br>Design lead: Albert Chang<br>Design: Mikki Janower and Robbie Reynolds<br>Motion design: Videl Torres<br>Photography: Craig Reynolds<br>Photo assistant: Spencer Blake<br>Photo retouching: Derek Kalisher</p>
         </div>
 
-
         <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.png">
+        <div class="video-wrapper col23">
+            <video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/acuity-motion-logo-lockup.webm">
+            </video>
+        </div>
 <!---------------------color----------------------->
-        <img class="col23" src="acuity/Logo.png">
         <div class="diptych col23">
             <img src="acuity/Logo Gradients.png">
             <img src="acuity/Color System B.png">
         </div>
-        <div class="col23 caption">The Acuity color palette is cyclical, mapped to the course of the day. It can be split into four keystone gradients, each comprised of five versatile spot colors.</div>
+        <div class="col23 caption">The Acuity palette is cyclical, mapped to the course of the day. It splits into four keystone gradients or twenty versatile spot colors.</div>
 
 <!---------------------logo----------------------->
         <div class="diptych col23">
@@ -36,6 +39,32 @@
             <img class="lozad lazyload" data-src="acuity/Logo Clearspace.png">
         </div>
         <div class="col23 caption">Acuity's wordmark is set in all lowercase, confidently bisected by a colon. It evokes a digital clock or watch: modern interpreters of time.</div>
+
+<!---------------------typography----------------------->
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="acuity/Typographic System 2.png">
+            <img class="lozad lazyload" data-src="acuity/Typographic System.png">
+        </div>
+        <div class="col23 caption">Its typographic system pairs Clarkson — designed for the Squarespace brand ecosystem — with Recoleta, which lends its visual vocabulary a warm, conversational tone.</div>
+
+<!----------------------composition--------------------->
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="acuity/Composition System.png">
+            <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.png">
+        </div>
+        <div class="col23 caption">A layout system evoking calendar blocks adheres to a set construction process. A modular grid system dictates margins and columns. Events are placed on the grid and broken into blocks, then annotated with timestamps.</div>
+
+<!---------------------motion----------------------->
+        <div class="video-wrapper col23">
+            <video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/acuity-motion-colon.webm">
+            </video>
+
+            <!--<video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/Acuity-motion-bento.webm">
+            </video>-->
+        </div>
+        <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
 
 <!---------------------photography----------------------->
         <img class="col23 lozad lazyload" data-src="acuity/115_E073_Acuity_Pet-Grooming_HERO_2034_03.jpeg">
@@ -46,26 +75,33 @@
         <img class="col23 lozad lazyload" data-src="acuity/Acuity_PressImage_1920x1080_02-1.png">
         <div class="col23 caption">Acuity photography surveys all kinds of bookable experiences. Appointments booked with Acuity are rendered without the hold music, paperwork, or waiting rooms — smooth and seamless.</div>
 
-<!---------------------type and composition----------------------->
-        <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/Typographic System.png">
-            <img class="lozad lazyload" data-src="acuity/Composition System.png">
-        </div>
-        <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.png">
-        <div class="col23 caption">A layout system evoking calendar blocks adheres to a set construction process. A modular grid system dictates margins and columns. Events are placed on the grid and broken into blocks, then annotated with timestamps.</div>
-
-<!---------------------motion----------------------->
-        <img class="col23 lozad lazyload" data-src="acuity/AS_logo_gradient_optimized.gif">
-        <img class="col23 lozad lazyload" data-src="acuity/motion-showcase.gif">
-        <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
-
 <!---------------------applications----------------->
-        <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_04.png">
-        <img class="col23 lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_09.png">
-        <img class="col23 lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.png">
-        <img class="col23 lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.png">
-        <img class="col23 lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.png">
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.png">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email8_Hero.png">
+        </div>
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.png">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.png">
+        </div>
+        <div class="video-wrapper col23">
+            <video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/acuity-motion-calendarblocks.webm">
+            </video>
+        </div>
+        <div class="col23 caption">In its brand communications, Acuity surfaces appear smooth and glassy, yet welcoming and warm.</div>
 
+<!---------------------applications------------------>
+        <div class="video-wrapper col23">
+            <video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/acuity-motion-timepassage.webm">
+            </video>
+        </div>
+        <div class="video-wrapper col23">
+            <video autoplay="autoplay" loop="loop" name="OOH">
+                <source src="acuity/acuity-motion-ooh.webm">
+            </video>
+        </div>
 
 
 <!----end of gallery </div> tag — do not touch--------->
