video troubleshooting boolean terms

--- a/acuity.html
+++ b/acuity.html
@@ -21,12 +21,12 @@
         </div>
 
         <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.png">
+<!---------------------color----------------------->
         <div class="video-wrapper col23">
-            <video autoplay="autoplay" loop="loop" name="OOH">
+            <video muted autoplay loop>
                 <source src="acuity/acuity-motion-logo-lockup.webm">
             </video>
         </div>
-<!---------------------color----------------------->
         <div class="diptych col23">
             <img src="acuity/Logo Gradients.png">
             <img src="acuity/Color System B.png">
@@ -56,13 +56,15 @@
 
 <!---------------------motion----------------------->
         <div class="video-wrapper col23">
-            <video autoplay="autoplay" loop="loop" name="OOH">
+            <video muted autoplay loop>
                 <source src="acuity/acuity-motion-colon.webm">
             </video>
+            <div class="video-wrapper col23">
+                <video muted autoplay loop>
+                    <source src="acuity/AS_Screensaver_06.12.23.webm">
+                </video>
+            </div>
 
-            <!--<video autoplay="autoplay" loop="loop" name="OOH">
-                <source src="acuity/Acuity-motion-bento.webm">
-            </video>-->
         </div>
         <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
 
@@ -85,7 +87,7 @@
             <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.png">
         </div>
         <div class="video-wrapper col23">
-            <video autoplay="autoplay" loop="loop" name="OOH">
+            <video muted autoplay loop>
                 <source src="acuity/acuity-motion-calendarblocks.webm">
             </video>
         </div>
@@ -93,12 +95,12 @@
 
 <!---------------------applications------------------>
         <div class="video-wrapper col23">
-            <video autoplay="autoplay" loop="loop" name="OOH">
+            <video muted autoplay loop>
                 <source src="acuity/acuity-motion-timepassage.webm">
             </video>
         </div>
         <div class="video-wrapper col23">
-            <video autoplay="autoplay" loop="loop" name="OOH">
+            <video muted autoplay loop>
                 <source src="acuity/acuity-motion-ooh.webm">
             </video>
         </div>
