Acuity case study fix

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 
 <div class="listing" data-link="acuity.html">
     <h2>Identity<br><span class="client">Acuity Scheduling</span></h2>
-    <img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">
-    <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Applications_05.png">
+    <!--<img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">-->
+    <video muted autoplay loop>
+        <source src="acuity/AS_Screensaver_06.12.23.webm">
+    </video>
+    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.png">
 </div> 
 
 <div class="listing" data-link="community.html">
