--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
     <img class="" src="venndiagramm/FlimForum-Sidebyside.jpg">
 </div> 
 
+<div class="listing" data-link="acuity.html">
+    <h2 class="col1">Identity<br><span class="client">Acuity Scheduling</span></h2>
+    <!--<img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">-->
+    <video muted autoplay loop>
+        <source src="acuity/AS_Screensaver_06.12.23.webm">
+    </video>
+    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.png">
+</div> 
+
 <div class="listing" data-link="fossora.html">
-    <h2 class="col1">fossora<br><span class="client">Björk</span></h2>
-    <img class="col23" src="fossora/bjork-ovule-22.jpg">
+    <img class="col12" src="fossora/bjork-ovule-22.jpg">
+    <h2 class="col3">fossora<br><span class="client">Björk</span></h2>
 </div>
 
 <div class="listing" data-link="mhns.html">
@@ -27,15 +36,6 @@
     <img src="mhns/mhns-thumbnail.png">
     <img src="mhns/catalog-thumbnail.gif">
 </div>
-
-<div class="listing" data-link="acuity.html">
-    <h2>Identity<br><span class="client">Acuity Scheduling</span></h2>
-    <!--<img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">-->
-    <video muted autoplay loop>
-        <source src="acuity/AS_Screensaver_06.12.23.webm">
-    </video>
-    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.png">
-</div> 
 
 <div class="listing" data-link="community.html">
     <img class="lozad lazyload col12" data-src="community/contents.jpg">
