--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="listing" data-link="fossora.html">
     <img class="col12" src="fossora/bjork-ovule-22.jpg">
-    <h2 class="col3">fossora<br><span class="client">Björk</span></h2>
+    <h2>fossora<br><span class="client col3">Björk</span></h2>
 </div>
 
 <div class="listing" data-link="mhns.html">
