webp file conversion

--- a/acuity.html
+++ b/acuity.html
@@ -20,7 +20,7 @@
                 <p>Creative Direction: Satu Pelkonen<br>Design lead: Albert Chang<br>Design: Mikki Janower and Robbie Reynolds<br>Motion design: Videl Torres<br>Photography: Craig Reynolds<br>Photo assistant: Spencer Blake<br>Photo retouching: Derek Kalisher</p>
         </div>
 
-        <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.png">
+        <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.webp">
 <!---------------------color----------------------->
         <div class="video-wrapper col23">
             <video muted autoplay loop>
@@ -29,7 +29,7 @@
         </div>
         <div class="diptych col23">
             <img src="acuity/Logo Gradients.png">
-            <img src="acuity/Color System B.png">
+            <img src="acuity/Color System B.webp">
         </div>
         <div class="col23 caption">The Acuity palette is cyclical, mapped to the course of the day. It splits into four keystone gradients or twenty versatile spot colors.</div>
 
@@ -42,15 +42,15 @@
 
 <!---------------------typography----------------------->
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/Typographic System 2.png">
+            <img class="lozad lazyload" data-src="acuity/Typographic System 2.webp">
             <img class="lozad lazyload" data-src="acuity/Typographic System.png">
         </div>
         <div class="col23 caption">Its typographic system pairs Clarkson — designed for the Squarespace brand ecosystem — with Recoleta, which lends its visual vocabulary a warm, conversational tone.</div>
 
 <!----------------------composition--------------------->
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/Composition System.png">
-            <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.png">
+            <img class="lozad lazyload" data-src="acuity/Composition System.webp">
+            <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.webp">
         </div>
         <div class="col23 caption">A layout system evoking calendar blocks adheres to a set construction process. A modular grid system dictates margins and columns. Events are placed on the grid and broken into blocks, then annotated with timestamps.</div>
 
@@ -63,21 +63,21 @@
         <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
 
 <!---------------------photography----------------------->
-        <img class="col23 lozad lazyload" data-src="acuity/115_E073_Acuity_Pet-Grooming_HERO_2034_03.jpeg">
+        <img class="col23 lozad lazyload" data-src="acuity/115_E073_Acuity_Pet-Grooming_HERO_2034_03.webp">
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/123_E073_Acuity_Dancers_HERO_2754.jpeg">
-            <img class="lozad lazyload" data-src="acuity/126_E073_Acuity_Jogging_HERO_3351_02.jpeg">
+            <img class="lozad lazyload" data-src="acuity/123_E073_Acuity_Dancers_HERO_2754.webp">
+            <img class="lozad lazyload" data-src="acuity/126_E073_Acuity_Jogging_HERO_3351_02.webp">
         </div>
         <div class="col23 caption">Acuity photography surveys all kinds of bookable experiences. Appointments booked with Acuity are rendered without the hold music, paperwork, or waiting rooms — smooth and seamless.</div>
 
 <!---------------------applications----------------->
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.png">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.webp">
             <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email8_Hero.png">
         </div>
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.png">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.png">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.webp">
+            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.webp">
         </div>
         <div class="video-wrapper col23">
             <video muted autoplay loop>
