--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <video muted autoplay loop>
         <source src="acuity/AS_Screensaver_06.12.23.webm">
     </video>
-    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.png">
+    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.webp">
 </div> 
 
 <div class="listing" data-link="fossora.html">
